--- a/hello-restful/pom.xml
+++ b/hello-restful/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>restful-practice</artifactId>
+    <artifactId>hello-restful</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>restful-practice</name>
-    <description>restful-practice</description>
+    <name>hello-restful</name>
+    <description>hello-restful</description>
 
     <properties>
         <java.version>1.8</java.version>
