--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0.1</version>
     <modules>
         <module>hello-restful</module>
+        <module>hello-mybatis-plus</module>
+        <module>hello-optimistic-lock</module>
     </modules>
 
 
